--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "express": "3.x",
-    "swig": "~1.1.0"
+    "swig": "~1.1.0",
+    "bower": "~1.2.7"
   }
 }
